# flasc

./: .buildinfo  .codecov.yml  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  HISTORY.rst  NOTICE.txt  README.md  README.rst  READMELONG.rst  api.html  data_analysis.html  data_processing.html  energy_change.html  energy_ratio.html  flasc_data_format.html  genindex.html  getting_started.html  index.html  installation.html  licensing.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  total_uplift.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation.yaml  feature_request.yaml
.github/workflows/: continuous-integration-workflow.yaml  deploy-pages.yaml  python-publish.yml
_autosummary/: flasc.analysis.analysis_input.AnalysisInput.html  flasc.analysis.analysis_input.generate_block_list.html  flasc.analysis.analysis_input.html  flasc.analysis.energy_ratio.compute_energy_ratio.html  flasc.analysis.energy_ratio.html  flasc.analysis.energy_ratio_heterogeneity_mapper.heterogeneity_mapper.html  flasc.analysis.energy_ratio_heterogeneity_mapper.html  flasc.analysis.energy_ratio_input.EnergyRatioInput.html  flasc.analysis.energy_ratio_input.generate_block_list.html  flasc.analysis.energy_ratio_input.html  flasc.analysis.energy_ratio_output.EnergyRatioOutput.html  flasc.analysis.energy_ratio_output.html  flasc.analysis.expected_power_analysis.html  flasc.analysis.expected_power_analysis.total_uplift_expected_power.html  flasc.analysis.expected_power_analysis.total_uplift_expected_power_sweep_ws_min.html  flasc.analysis.expected_power_analysis_by.html  flasc.analysis.expected_power_analysis_by.total_uplift_expected_power_by_wd.html  flasc.analysis.expected_power_analysis_by.total_uplift_expected_power_by_wd_shift_ws_min.html  flasc.analysis.expected_power_analysis_by.total_uplift_expected_power_by_ws.html  flasc.analysis.expected_power_analysis_output.ExpectedPowerAnalysisOutput.html  flasc.analysis.expected_power_analysis_output.html  flasc.analysis.expected_power_analysis_utilities.html  flasc.analysis.html  flasc.analysis.total_uplift.compute_total_uplift.html  flasc.analysis.total_uplift.html  flasc.analysis.total_uplift_power_ratio.compute_total_uplift.html  flasc.analysis.total_uplift_power_ratio.html  flasc.analysis.total_uplift_power_ratio.total_uplift_power_ratio.html  flasc.data_processing.dataframe_manipulations.df_drop_nan_rows.html  flasc.data_processing.dataframe_manipulations.df_find_and_fill_data_gaps_with_missing.html  flasc.data_processing.dataframe_manipulations.df_reduce_precision.html  flasc.data_processing.dataframe_manipulations.df_sort_and_find_duplicates.html  flasc.data_processing.dataframe_manipulations.df_sort_and_fix_duplicates.html  flasc.data_processing.dataframe_manipulations.filter_df_by_ti.html  flasc.data_processing.dataframe_manipulations.filter_df_by_wd.html  flasc.data_processing.dataframe_manipulations.filter_df_by_ws.html  flasc.data_processing.dataframe_manipulations.get_column_mean.html  flasc.data_processing.dataframe_manipulations.get_num_turbines.html  flasc.data_processing.dataframe_manipulations.html  flasc.data_processing.dataframe_manipulations.is_day_or_night.html  (+104 more)
_modules/: index.html
_modules/flasc/: flasc_dataframe.html
_sources/: energy_change.md  energy_ratio.md  index.md  index.rst  installation.md
docs/: _config.yml  _toc.yml  api.rst  data_processing.rst  energy_change.md  energy_ratio.md  flasc_data_format.ipynb  flascdataframe.ipynb  getting_started.md  getting_started.rst  index.md  index.rst  installation.md  installation.md~main  licensing.rst  overview.md  overview.rst  references.bib  requirements.txt  total_uplift.md
docs/source/: conf.py  (+8 more)
examples/: demo_downsample.py
examples_smarteole/: 00_inspect_floris_model.ipynb  01_download_and_format_dataset.ipynb  01_precalculate_floris_solutions.ipynb  01_precalculate_floris_solutions.py  02_download_and_format_dataset.ipynb  02_filter_ws_power_curves.ipynb  03_filter_ws_power_curves.ipynb  03_northing_calibration.ipynb  04_northing_calibration.ipynb  05_baseline_analysis.ipynb  05_baseline_energy_ratio_analysis.ipynb  05_field_campaign_analysis.ipynb  06_wake_steering_analysis.ipynb  06_wake_steering_energy_ratio_analysis.ipynb  06b_wake_steering_compare_with_polars.ipynb  07_emgauss_scada_tuning_optimization_method.ipynb  08_emgauss_tuning_day_night.ipynb  08_try_day_night.ipynb  10_uplift_with_expected_power.ipynb  11_model_tuning_with_model_fit.ipynb  models.py  precalculate_floris_solutions.py  test_script.py
flasc/: __init__.py  circular_statistics.py  demo_improved_downsample.ipynb  flasc_dataframe.py  floris_tools.py  logging_manager.py  nb_00_redevelop_time_ops.ipynb  optimization.py  table_analysis.py  table_analysis_bootstrap.py  time_operations.py  utilities.py  utilities_examples.py  visualization.py  yaw_optimizer_visualization.py
floris_scada_analysis/: __init__.py  bias_correction.py  bias_estimation.py  circular_statistics.py  data_importing.py  dataframe_filtering.py  dataframe_manipulations.py  df_reader_writer.py  energy_ratio.py  energy_ratio_visualization.py  energy_tools.py  find_sensor_faults.py  floris_scada.py  floris_sensitivity_analysis.py  floris_tools.py  layout.py  logging.py  optimization.py  raw_data_importing.py  scada_analysis.py  sqldatabase_management.py  time_operations.py  turbulence_estimator.py  utilities.py  wd_statistics.py  ws_pow_filtering.py  yaw_pow_fitting.py
tests/: circular_statistics_test.py  cost_library_test.py  dataframe_manipulations_test.py  df_filtering_test.py  df_time_operations_test.py  energy_ratio_test.py  expected_power_analysis_test.py  flasc_dataframe_test.py  floris_tools_test.py  interpolate_with_gaps_test.py  model_fit_test.py  model_tuning_test.py  northing_offset_change_hoger_test.py  optimization_test.py  test_dataframe_manipulations.py  test_dfm.py  test_yaw_power_curve_estimation.py  total_uplift_test.py  turbine_analysis_test.py  yaw_power_curve_estimation_test.py
(+451 files in other folders)
